--- a/web/package.json
+++ b/web/package.json
@@ -22,12 +22,14 @@
   },
   "homepage": "https://github.com/goncharovnikita/wallpaperize#readme",
   "dependencies": {
+    "express": "^4.16.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "rxjs": "^6.2.0",
     "typescript": "^2.9.1"
   },
   "devDependencies": {
+    "@types/express": "^4.16.0",
     "@types/react": "^16.3.17",
     "@types/react-dom": "^16.0.6",
     "@types/webpack": "^4.4.0",
@@ -40,6 +42,7 @@
     "ts-node": "^6.1.0",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.3",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-dev-server": "^3.1.4",
+    "webpack-node-externals": "^1.7.2"
   }
 }
