--- a/.travis.yml
+++ b/.travis.yml
@@ -14,14 +14,16 @@ before_cache:
     mkdir -p $HOME/docker && docker images -a --filter='dangling=false' --format '{{.Repository}}:{{.Tag}} {{.ID}}'
     | xargs -n 2 -t sh -c 'test -e $HOME/docker/$1.tar.gz || docker save $0 | gzip -2 > $HOME/docker/$1.tar.gz'
 
-deploy_back:
-  script:
-    - cd back
-    - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
-    - docker build -t goncharovnikita/wallpaperize:back --rm .
-    - docker push goncharovnikita/wallpaperize:back
-
 cache:
   bundler: true
   directories:
     - $HOME/docker
+
+jobs:
+  include:
+    deploy_back:
+      script:
+        - cd back
+        - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
+        - docker build -t goncharovnikita/wallpaperize:back --rm .
+        - docker push goncharovnikita/wallpaperize:back
