--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ dist: trusty
 
 jobs:
   include:
-    deploy_back:
+    - deploy_back:
       script:
         - cd back
         - docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD"
