--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -6,7 +6,8 @@ ADD . ${dist}
 
 WORKDIR ${dist}
 
-RUN apk add curl --no-cache
+RUN apk add curl --no-cache && \
+    apk add git --no-cache
 
 RUN curl https://glide.sh/get | sh
 
