Add glide installation

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,6 @@ jobs:
     - deploy_app:
       script:
         - cd app
+        - curl https://glide.sh/get | sh
+        - glide install
         - make deploy
