--- a/web/package.json
+++ b/web/package.json
@@ -23,31 +23,31 @@
   },
   "homepage": "https://github.com/goncharovnikita/wallpaperize#readme",
   "dependencies": {
-    "axios": "^0.18.0",
-    "bootstrap": "^4.1.1",
-    "express": "^4.16.3",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
-    "rxjs": "^6.2.0",
-    "typescript": "^2.9.1"
+    "axios": "0.18.0",
+    "bootstrap": "4.1.1",
+    "express": "4.16.3",
+    "react": "16.4.0",
+    "react-dom": "16.4.0",
+    "rxjs": "6.2.0",
+    "typescript": "2.9.1"
   },
   "devDependencies": {
-    "@types/express": "^4.16.0",
-    "@types/react": "^16.3.17",
-    "@types/react-dom": "^16.0.6",
-    "@types/webpack": "^4.4.0",
-    "copy-webpack-plugin": "^4.5.1",
-    "css-loader": "^0.28.11",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^7.0.3",
-    "style-loader": "^0.21.0",
-    "ts-loader": "^4.4.1",
-    "ts-node": "^6.1.0",
-    "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.3",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-node-externals": "^1.7.2"
+    "@types/express": "4.16.0",
+    "@types/react": "16.3.17",
+    "@types/react-dom": "16.0.6",
+    "@types/webpack": "4.4.0",
+    "copy-webpack-plugin": "4.5.1",
+    "css-loader": "0.28.11",
+    "html-loader": "0.5.5",
+    "html-webpack-plugin": "3.2.0",
+    "node-sass": "4.9.0",
+    "sass-loader": "7.0.3",
+    "style-loader": "0.21.0",
+    "ts-loader": "4.4.1",
+    "ts-node": "6.1.0",
+    "webpack": "4.12.0",
+    "webpack-cli": "3.0.3",
+    "webpack-dev-server": "3.1.4",
+    "webpack-node-externals": "1.7.2"
   }
 }
