--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -9,9 +9,9 @@ WORKDIR ${dist}
 RUN apk add curl --no-cache && \
     apk add git --no-cache
 
-# RUN curl https://glide.sh/get | sh
+RUN curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
 
-# RUN glide install
+RUN dep ensure
 
 RUN env GOOS=linux GOARCH=386 go build
 
