Add image url getter to server, add few methods to wallpaperize cli

--- a/back/Makefile
+++ b/back/Makefile
@@ -1,2 +1,5 @@
 run:
-	go build && ./back | rm back
+	go build && MAX_RANDOM_DISK_USAGE=0.01 ./back | rm back
+
+live:
+	MAX_RANDOM_DISK_USAGE=0.01 gin run main.go
