--- a/desktop/package.json
+++ b/desktop/package.json
@@ -30,6 +30,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
     "electron": "^2.0.2",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.3",
@@ -43,7 +44,9 @@
     "@types/react": "^16.3.17",
     "@types/react-dom": "^16.0.6",
     "@types/webpack": "^4.4.0",
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
+    "font-awesome": "^4.7.0",
     "parcel-bundler": "^1.8.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
