--- a/desktop/package.json
+++ b/desktop/package.json
@@ -11,7 +11,8 @@
     "prestart": "rimraf dist && yarn run build:electron",
     "pack": "electron-builder --dir",
     "dist": "electron-builder",
-    "prebuild:prod": "rimraf dist"
+    "precompile": "rimraf dist",
+    "predist": "yarn compile"
   },
   "keywords": [
     "Wallpaperize"
@@ -22,43 +23,38 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
     "fix-path": "^2.1.0",
-    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "source-map-support": "^0.5.6",
-    "ts-loader": "^4.4.1",
-    "ts-node": "^6.1.1",
-    "typescript": "^2.9.1",
-    "webpack": "^4.12.0",
+    "source-map-support": "^0.5.5",
     "yarn": "^1.7.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.0.0-beta.51",
     "@types/html-webpack-plugin": "^2.30.3",
-    "@types/react": "^16.3.17",
+    "@types/react": "^16.3.18",
     "@types/react-dom": "^16.0.6",
+    "@types/react-router": "^4.0.26",
     "@types/react-router-dom": "^4.2.7",
     "@types/webpack": "^4.4.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-preset-es2015-node": "^6.1.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.11",
-    "electron": "^2.0.2",
+    "electron": "2.0.0",
     "electron-builder": "^20.15.1",
-    "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^3.2.0",
+    "electron-webpack": "^2.0.1",
+    "electron-webpack-ts": "^2.0.2",
     "node-sass": "^4.9.0",
-    "rimraf": "^2.6.2",
     "sass-loader": "^7.0.3",
-    "standard": "^11.0.1",
-    "standard-loader": "^6.0.1",
-    "style-loader": "^0.21.0",
-    "webpack-dev-server": "^3.1.4"
+    "typescript": "^2.9.2",
+    "webpack": "^4.8.1"
   },
   "resolutions": {
     "webpack-sources": "1.0.1"
+  },
+  "electronWebpack": {
+    "renderer": {
+      "webpackConfig": "webpack-alias.js"
+    }
   }
 }
