--- a/desktop/tsconfig.json
+++ b/desktop/tsconfig.json
@@ -1,21 +1,12 @@
 {
+    "extends": "./node_modules/electron-webpack/tsconfig-base.json",
     "compileOnSave": false,
     "compilerOptions": {
-        "target": "es2015",
-        "moduleResolution": "node",
-        "pretty": true,
-        "newLine": "LF",
-        "allowSyntheticDefaultImports": true,
-        "strict": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
-        "sourceMap": true,
-        "skipLibCheck": true,
-        "allowJs": true,
-        "jsx": "preserve",
+        "jsx": "react",
         "baseUrl": "./",
         "paths": {
-            "@app/*": ["src/*"]
+            "@app/*": ["src/renderer/*"],
+            "@approot/*": ["src/*"]
         }
     }
 }
