--- a/desktop/package.json
+++ b/desktop/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wallpaperize-desktop",
-  "version": "1.0.0-beta",
+  "version": "1.0.0-beta-1",
   "description": "A wallpaperize desktop application",
   "repository": {
     "url": "https://github.com/goncharovnikita/wallpaperize"
