--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ branches:
 jobs:
   include:
     - stage: Build desktop MAC
-      if: branch =~ desktop
+      if: branch = desktop
       os: osx
       language: node_js
       node_js:
@@ -19,7 +19,7 @@ jobs:
         - npm install
         - yarn dist
     - stage: Build desktop Linux
-      if: branch =~ desktop
+      if: branch = desktop
       os: linux
       dist: ubuntu
       language: node_js
