--- a/desktop/package.json
+++ b/desktop/package.json
@@ -26,7 +26,6 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
-    "electron": "^2.0.2",
     "fix-path": "^2.1.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
@@ -52,7 +51,8 @@
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.3",
     "typescript": "^2.9.2",
-    "webpack": "^4.8.1"
+    "webpack": "^4.8.1",
+    "electron": "^2.0.2"
   },
   "resolutions": {
     "webpack-sources": "1.0.1"
