add compile script before build

--- a/desktop/package.json
+++ b/desktop/package.json
@@ -17,6 +17,7 @@
     "precompile": "rimraf dist",
     "dist:simple": "electron-builder",
     "predist": "yarn compile",
+    "predist:all": "yarn compile",
     "postinstall": "electron-builder install-app-deps"
   },
   "keywords": [
