--- a/desktop/package.json
+++ b/desktop/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wallpaperize-desktop",
-  "version": "1.0.0-beta-2",
+  "version": "1.0.0-beta-3",
   "description": "A wallpaperize desktop application",
   "repository": {
     "url": "https://github.com/goncharovnikita/wallpaperize"
@@ -18,6 +18,7 @@
     "dist:simple": "electron-builder",
     "predist": "yarn compile",
     "predist:all": "yarn compile",
+    "predist:simple": "yarn compile",
     "postinstall": "electron-builder install-app-deps"
   },
   "keywords": [
