--- a/desktop/package.json
+++ b/desktop/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wallpaperize-desktop",
-  "version": "1.0.0-beta-3",
+  "version": "1.0.1-beta",
   "description": "A wallpaperize desktop application",
   "repository": {
     "url": "https://github.com/goncharovnikita/wallpaperize"
@@ -29,6 +29,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
+    "electron-log": "^2.2.15",
     "fix-path": "^2.1.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
@@ -47,6 +48,7 @@
     "@types/react-router": "^4.0.26",
     "@types/react-router-dom": "^4.2.7",
     "@types/webpack": "^4.4.0",
+    "electron": "^2.0.2",
     "electron-builder": "20.14.7",
     "electron-updater": "^2.21.10",
     "electron-webpack": "^2.0.1",
@@ -54,8 +56,7 @@
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.3",
     "typescript": "^2.9.2",
-    "webpack": "^4.8.1",
-    "electron": "^2.0.2"
+    "webpack": "^4.8.1"
   },
   "resolutions": {
     "webpack-sources": "1.0.1"
