--- a/desktop/package.json
+++ b/desktop/package.json
@@ -31,6 +31,7 @@
     "bootstrap": "^4.1.1",
     "electron-log": "^2.2.15",
     "fix-path": "^2.1.0",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
     "react": "^16.4.1",
@@ -53,6 +54,8 @@
     "electron-updater": "^2.21.10",
     "electron-webpack": "^2.0.1",
     "electron-webpack-ts": "^2.0.2",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.3",
     "typescript": "^2.9.2",
