--- a/desktop/package.json
+++ b/desktop/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wallpaperize-desktop",
-  "version": "1.0.3-beta",
+  "version": "1.0.4-beta",
   "description": "A wallpaperize desktop application",
   "repository": {
     "url": "https://github.com/goncharovnikita/wallpaperize"
@@ -36,8 +36,10 @@
     "popper.js": "^1.14.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
     "source-map-support": "^0.5.5",
     "yarn": "^1.7.0"
   },
@@ -46,6 +48,7 @@
     "@types/html-webpack-plugin": "^2.30.3",
     "@types/react": "^16.3.18",
     "@types/react-dom": "^16.0.6",
+    "@types/react-redux": "^6.0.2",
     "@types/react-router": "^4.0.26",
     "@types/react-router-dom": "^4.2.7",
     "@types/webpack": "^4.4.0",
