--- a/desktop/tsconfig.json
+++ b/desktop/tsconfig.json
@@ -2,6 +2,7 @@
     "extends": "./node_modules/electron-webpack/tsconfig-base.json",
     "compileOnSave": false,
     "compilerOptions": {
+        "noImplicitAny": false,
         "jsx": "react",
         "baseUrl": "./",
         "paths": {
