rewrite web & fix app deployment

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:8-alpine as deps
+FROM node:14.3.0-alpine3.11 as deps
 
 COPY package.json /app/package.json
 
@@ -6,7 +6,7 @@ WORKDIR /app
 
 RUN npm install
 
-FROM node:8-alpine as dist
+FROM node:14.3.0-alpine3.11 as dist
 
 COPY --from=deps /app/node_modules /web/node_modules
 
