--- a/web/package.json
+++ b/web/package.json
@@ -1,53 +1,38 @@
 {
-  "name": "wallpaperize-web",
-  "version": "1.0.0",
-  "description": "Wallpaperize react web application",
-  "main": "index.js",
-  "scripts": {
-    "build": "webpack --progress --colors --config webpack.dev.ts",
-    "build:prod": "webpack --progress --colors --config webpack.prod.ts",
-    "build:prod:ssr": "webpack --progress --colors --config webpack.server.ts",
-    "start": "webpack-dev-server --progress --colors --config webpack.dev.ts"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/goncharovnikita/wallpaperize.git"
-  },
-  "keywords": [
-    "wallpaperize"
-  ],
-  "author": "Goncharov Nikita",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/goncharovnikita/wallpaperize/issues"
-  },
-  "homepage": "https://github.com/goncharovnikita/wallpaperize#readme",
+  "name": "web2",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "axios": "0.18.0",
-    "bootstrap": "4.1.1",
-    "express": "4.16.3",
-    "react": "16.4.0",
-    "react-dom": "16.4.0",
-    "rxjs": "6.2.0",
-    "typescript": "2.9.1"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "devDependencies": {
-    "@types/express": "4.16.0",
-    "@types/react": "16.3.17",
-    "@types/react-dom": "16.0.6",
-    "@types/webpack": "4.4.0",
-    "copy-webpack-plugin": "4.5.1",
-    "css-loader": "0.28.11",
-    "html-loader": "0.5.5",
-    "html-webpack-plugin": "3.2.0",
-    "node-sass": "4.9.0",
-    "sass-loader": "7.0.3",
-    "style-loader": "0.21.0",
-    "ts-loader": "4.4.1",
-    "ts-node": "6.1.0",
-    "webpack": "4.12.0",
-    "webpack-cli": "3.0.3",
-    "webpack-dev-server": "3.1.4",
-    "webpack-node-externals": "1.7.2"
+    "node-sass": "^4.14.1"
   }
 }
