--- a/desktop/package.json
+++ b/desktop/package.json
@@ -259,6 +259,7 @@
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@hot-loader/react-dom": "^16.13.0",
     "axios": "^0.19.2",
+    "classnames": "^2.2.6",
     "connected-react-router": "^6.8.0",
     "core-js": "^3.6.5",
     "devtron": "^1.4.0",
@@ -275,7 +276,8 @@
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
-    "redux-thunk": "^2.3.0",
+    "redux-saga": "^1.1.3",
+    "reselect": "^4.0.0",
     "source-map-support": "^0.5.16"
   },
   "devEngines": {
