--- a/back/Makefile
+++ b/back/Makefile
@@ -1,5 +1,5 @@
 run:
-	go build && MAX_RANDOM_DISK_USAGE=0.01 ./back | rm back
+	go build && MAX_RANDOM_DISK_USAGE=0.01 ./back
 
 live:
 	MAX_RANDOM_DISK_USAGE=0.01 gin run main.go
