add gcc to backend build

--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -9,6 +9,8 @@ WORKDIR ${dist}
 RUN apk add curl --no-cache && \
     apk add git --no-cache
 
+RUN apk --no-cache add gcc libc-dev
+
 RUN env CGO_ENABLED=1 GOOS=linux GOARCH=386 go build -o ./back
 
 FROM alpine
