--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -6,10 +6,7 @@ ADD . ${dist}
 
 WORKDIR ${dist}
 
-RUN apk add curl --no-cache && \
-    apk add git --no-cache && \
-    apk add make --no-cache && \
-    apk add build-base
+RUN apk add curl git make build-base gcc g++ --no-cache
 
 RUN env CGO_ENABLED=1 GOOS=linux GOARCH=386 go build -o ./back
 
