add clang and libc-dev to build

--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -6,7 +6,7 @@ ADD . ${dist}
 
 WORKDIR ${dist}
 
-RUN apk add curl git make build-base gcc g++ --no-cache
+RUN apk add curl git make build-base gcc g++ clang libc-dev --no-cache
 
 RUN env CGO_ENABLED=1 GOOS=linux GOARCH=386 go build -o ./back
 
