cpp build manipulations

--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -6,7 +6,11 @@ ADD . ${dist}
 
 WORKDIR ${dist}
 
-RUN apk add curl git make build-base gcc g++ clang libc-dev --no-cache
+RUN apk add curl git clang clang-dev musl-dev git gcc --no-cache
+
+ENV CXX=clang++
+
+ENV CC=clang
 
 RUN env CGO_ENABLED=1 GOOS=linux GOARCH=386 go build -o ./back
 
