--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -10,7 +10,7 @@ RUN apk add curl git --no-cache
 
 RUN apk add --update gcc musl-dev
 
-RUN env CGO_ENABLED=1 GOOS=linux GOARCH=386 go build --tags "libsqlite3 linux" -o ./back
+RUN env CGO_ENABLED=1 go build --tags "libsqlite3 linux" -o ./back
 
 FROM alpine
 
