--- a/.github/workflows/ci-build-backend.yaml
+++ b/.github/workflows/ci-build-backend.yaml
@@ -42,3 +42,9 @@ jobs:
               --build-arg GITHUB_SHA=${GITHUB_SHA} --build-arg GIT_BRANCH=${ref} \
               --platform linux/amd64 \
               -t goncharovnikita/wallpaperize:back-${ref} -f ./back/Dockerfile ./back/.
+
+      - name: remote deployment from master
+        if: ${{ github.ref == 'refs/heads/master' }}
+        env:
+          UPDATER_KEY: ${{ secrets.UPDATER_KEY }}
+        run: curl https://goncharovnikita.com/updater/update/wallpaperize-backend/${UPDATER_KEY}
