change workflow trigger paths

--- a/.github/workflows/ci-build-backend.yaml
+++ b/.github/workflows/ci-build-backend.yaml
@@ -6,7 +6,7 @@ on:
       - master
     tags:
     paths:
-      - ".github/workflows/ci-build-backend.yml"
+      - ".github/workflows/ci-build-backend.yaml"
       - "back/**"
       - ".dockerignore"
 
