--- a/.github/workflows/ci-build-backend.yaml
+++ b/.github/workflows/ci-build-backend.yaml
@@ -47,4 +47,5 @@ jobs:
         if: ${{ github.ref == 'refs/heads/master' }}
         env:
           UPDATER_KEY: ${{ secrets.UPDATER_KEY }}
-        run: curl http://goncharovnikita.com/updater/update/wallpaperize-backend/${UPDATER_KEY}
+        run: |
+          curl -H "Authorization: Bearer ${UPDATER_KEY}" http://goncharovnikita.com/updater/v1/update
