--- a/.github/workflows/make-cli-release.yaml
+++ b/.github/workflows/make-cli-release.yaml
@@ -6,15 +6,19 @@ on:
       - release/app/v*
 
 jobs:
-  - name: Checkout
-    uses: actions/checkout@v2
+  create-release:
+    name: Create release
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
 
-  - name: Get the version
-    id: get_version
-    run: echo ::set-output name=VERSION::${GITHUB_REF_NAME/release\/app\/v}
+    - name: Get the version
+      id: get_version
+      run: echo ::set-output name=VERSION::${GITHUB_REF_NAME/release\/app\/v}
 
-  - name: Release
-    uses: softprops/action-gh-release@v1
-    with:
-      name: Wallpaperize cli ${{ steps.get_version.outputs.VERSION }}
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      with:
+        name: Wallpaperize cli ${{ steps.get_version.outputs.VERSION }}
 
