--- a/.github/workflows/make-cli-release.yaml
+++ b/.github/workflows/make-cli-release.yaml
@@ -21,4 +21,6 @@ jobs:
       uses: softprops/action-gh-release@v1
       with:
         name: Wallpaperize cli ${{ steps.get_version.outputs.VERSION }}
+        draft: false
+        prerelease: false
 
