--- a/.github/workflows/build-cli.yaml
+++ b/.github/workflows/build-cli.yaml
@@ -1,12 +1,15 @@
 name: Build cli
 
 on:
+  push:
+    branches:
+      master
   release:
     types: [created]
 
 jobs:
   release-matrix:
-    name: release linux/amd64
+    name: release ${{ matrix.goos }}/${{ matrix.goarch }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -34,7 +37,6 @@ jobs:
         goversion: 1.17
         project_path: ./app
         binary_name: wallpaperize
-        ldflags: -X=main.appVersion=${{ steps.get_version.outputs.VERSION }} -X=main.appBuild=${GITHUB_SHA}
         asset_name: wallpaperize-${{ matrix.goos }}-${{ matrix.goarch }}
 
 
