--- a/.github/workflows/build-cli.yaml
+++ b/.github/workflows/build-cli.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   release-matrix:
-    name: release ${{ matrix.goos }}/${{ matrix.goarch }}
+    name: release linux/amd64
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -32,11 +32,13 @@ jobs:
       uses: wangyoucao577/go-release-action@v1.22
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
+        pre_command: go mod vendor
         goos: ${{ matrix.goos }}
         goarch: ${{ matrix.goarch }}
         goversion: 1.17
         project_path: ./app
         binary_name: wallpaperize
+        ldflags: -X=main.appVersion=${{ steps.get_version.outputs.VERSION }} -X=main.appBuild=${GITHUB_SHA}
         asset_name: wallpaperize-${{ matrix.goos }}-${{ matrix.goarch }}
 
 
